--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   flutter_riverpod: ^2.5.1
+  intl: ^0.18.1 
   http: ^1.2.1
   flutter_secure_storage: ^9.2.2
   go_router: ^14.1.4
