--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,8 @@ dependencies:
   hooks_riverpod: ^2.5.1
   dio: ^5.8.0+1
   inspector: ^3.0.0
-
+  freezed_annotation: ^2.4.1
+  json_annotation: ^4.8.1
 
 dev_dependencies:
   flutter_test:
@@ -63,6 +64,8 @@ dev_dependencies:
   build_runner: ^2.4.9
   im_stepper: ^1.0.1+1
   google_fonts: ^4.0.4
+  freezed: ^2.4.5
+  json_serializable: ^6.7.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
